@startuml
title Diagramma Classi Applicative - Versione Semplificata

' ==================== VISTE (Widget) ====================
class LoginDialog {
  +inserisci_credenziali(email: str, password: str)
  +mostra_errore_login()
}

class WidgetStanze {
  +crea_stanza(nome: str, piano: int)
  +aggiorna_stanza(stanza: Stanza)
  +elimina_stanza(id_stanza: str)
  +elenca_stanze()
  +mostra_risultato_stanza(stanza: Stanza)
}

class WidgetDispositivi {
  +crea_dispositivo(nome: str, tipo: str, id_stanza: str)
  +aggiorna_dispositivo(dispositivo: Dispositivo)
  +elimina_dispositivo(id_dispositivo: str)
  +elenca_dispositivi()
  +invia_comando(id_dispositivo: str, comando: str)
  +mostra_risultato_comando(stato: Dispositivo)
}

class WidgetAutomazioni {
  +crea_regola(automazione: Automazione)
  +aggiorna_regola(automazione: Automazione)
  +elimina_regola(id_automazione: str)
  +elenca_regole()
  +mostra_risultato_operazione()
}

class WidgetLog {
  +cerca_eventi(filtro: str)
  +mostra_eventi(eventi: list)
  +esporta_eventi(filtro: str)
}

class WidgetDashboard {
  +mostra_dashboard(dati: str)
  +mostra_monitoraggio(dispositivi: list)
  +mostra_statistiche(eventi: list)
}

class WidgetBackup {
  +salva_backup()
  +mostra_backup_disponibili(backup: list)
  +carica_backup(percorso: str)
  +elimina_backup(percorso: str)
}

class WidgetUtenti {
  +elenca_utenti()
  +elimina_utente(id_utente: str)
}

class FinestraPrincipale {
  +aggiorna_dashboard()
}

' ==================== CONTROLLORI ====================
class ControlloreAutenticazione {
  +effettua_login(email: str, password: str): Utente
  +registra_utente(nome: str, email: str, password: str): Utente
  +elenca_utenti(): list
  +elimina_utente(id_utente: str): bool
}

class ControlloreStanze {
  +crea_stanza(nome: str, piano: int): Stanza
  +aggiorna_stanza(stanza: Stanza): Stanza
  +elimina_stanza(id_stanza: str): bool
  +elenca_stanze(): list
  +trova_stanza_per_id(id_stanza: str): Stanza
}

class ControlloreDispositivi {
  +crea_dispositivo(nome: str, tipo: str, id_stanza: str): Dispositivo
  +aggiorna_dispositivo(dispositivo: Dispositivo): Dispositivo
  +elimina_dispositivo(id_dispositivo: str): bool
  +elenca_dispositivi(): list
  +trova_dispositivo_per_id(id_dispositivo: str): Dispositivo
  +invia_comando(id_dispositivo: str, comando: str): Dispositivo
}

class ControlloreAutomazioni {
  +crea_regola(automazione: Automazione): Automazione
  +aggiorna_regola(automazione: Automazione): Automazione
  +elimina_regola(id_automazione: str): bool
  +elenca_regole(): list
  +trova_regola_per_id(id_automazione: str): Automazione
}

class ControlloreLog {
  +elenca_eventi(filtro: str): list
  +esporta_eventi(filtro: str): str
}

class ControlloreSistema {
  +apri_dashboard(id_utente: str): str
  +monitora_dispositivi(): list
  +genera_statistiche(filtro: str): list
  +esegui_automazioni(): list
  +salva_backup(): str
  +elenca_backup(): list
  +carica_backup(percorso: str): str
  +elimina_backup(percorso: str): bool
}

' ==================== SERVIZI ====================
class ServizioUtenti {
  +autentica(email: str, password: str): Utente
  +crea_utente(nome: str, email: str, password: str): Utente
  +elenca_utenti(): list
  +elimina_utente(id_utente: str): bool
}

class ServizioStanze {
  +crea(stanza: Stanza): Stanza
  +aggiorna(stanza: Stanza): Stanza
  +elimina(id_stanza: str): bool
  +elenca(): list
  +trova_per_id(id_stanza: str): Stanza
}

class ServizioDispositivi {
  +crea(dispositivo: Dispositivo): Dispositivo
  +aggiorna(dispositivo: Dispositivo): Dispositivo
  +elimina(id_dispositivo: str): bool
  +elenca(): list
  +trova_per_id(id_dispositivo: str): Dispositivo
  +invia_comando(id_dispositivo: str, comando: str): Dispositivo
}

class ServizioAutomazioni {
  +crea(automazione: Automazione): Automazione
  +aggiorna(automazione: Automazione): Automazione
  +elimina(id_automazione: str): bool
  +elenca(): list
  +trova_per_id(id_automazione: str): Automazione
  +elenca_attive(): list
  +elenca_per_dispositivo(id_dispositivo: str): list
  +esegui_automazione(automazione: Automazione): bool
  +esegui_tutte(): list
}

class ProgrammatoreAutomazioni {
  +automazioni_eseguite: pyqtSignal
  +avvia(): void
  +ferma(): void
}

class ServizioLog {
  +registra_evento(tipo: str, messaggio: str): Evento
  +elenca_eventi(filtro: str): list
  +esporta_eventi(filtro: str): str
}

class ServizioSistema {
  +carica_riepilogo(id_utente: str): str
  +monitora_dispositivi(): list
  +genera_statistiche(filtro: str): list
  +esegui_automazioni_ora(): list
  +salva_backup(): str
  +elenca_backup(): list
  +carica_backup(percorso: str): str
  +elimina_backup(percorso: str): bool
}

' ==================== RELAZIONI ====================
LoginDialog --> ControlloreAutenticazione
WidgetStanze --> ControlloreStanze
WidgetDispositivi --> ControlloreDispositivi
WidgetAutomazioni --> ControlloreAutomazioni
WidgetLog --> ControlloreLog
WidgetDashboard --> ControlloreSistema
WidgetBackup --> ControlloreSistema
WidgetUtenti --> ControlloreAutenticazione

ControlloreAutenticazione --> ServizioUtenti
ControlloreStanze --> ServizioStanze
ControlloreDispositivi --> ServizioDispositivi
ControlloreAutomazioni --> ServizioAutomazioni
ControlloreLog --> ServizioLog
ControlloreSistema --> ServizioSistema

ProgrammatoreAutomazioni --> ServizioAutomazioni
ProgrammatoreAutomazioni ..> FinestraPrincipale : segnale automazioni_eseguite

ServizioStanze --> ServizioLog
ServizioDispositivi --> ServizioLog
ServizioAutomazioni --> ServizioDispositivi
ServizioAutomazioni --> ServizioLog
ServizioSistema --> ServizioLog
ServizioSistema --> ServizioAutomazioni
@enduml
